--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/index.js",
     "test": "vitest",
     "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "quiz:retry": "npx tsx src/retryFailedQuizzes.ts",
+    "quiz:check": "npx tsx src/retryFailedQuizzes.ts --check",
+    "quiz:cli": "npx tsx src/QuizParserCLI.ts"
   },
   "keywords": [],
   "author": "",
