--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "test:coverage": "vitest run --coverage",
     "quiz:retry": "npx tsx src/retryFailedQuizzes.ts",
     "quiz:check": "npx tsx src/retryFailedQuizzes.ts --check",
-    "quiz:cli": "npx tsx src/QuizParserCLI.ts"
+    "quiz:cli": "npx tsx src/QuizParserCLI.ts",
+    "quiz:service": "npx tsx src/examples/ExamPaperServiceExample.ts",
+    "quiz:service:chunks": "npx tsx src/QuizParserCLI.ts -- --use-service --chunks 3",
+    "quiz:legacy": "npx tsx src/QuizParserCLI.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/uuid": "^11.0.0",
     "typescript": "^5.0.0",
     "vitest": "^3.2.4"
   },
@@ -25,6 +29,7 @@
     "@boundaryml/baml": "^0.90.2",
     "dotenv": "^16.5.0",
     "p-limit": "^6.2.0",
-    "surrealdb": "^1.3.2"
+    "surrealdb": "^1.3.2",
+    "uuid": "^13.0.0"
   }
 }
