--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "dependencies": {
     "@boundaryml/baml": "^0.90.2",
+    "@types/yargs": "^17.0.33",
     "dotenv": "^16.5.0",
     "p-limit": "^6.2.0",
     "surrealdb": "^1.3.2",
-    "uuid": "^13.0.0"
+    "toml": "^3.0.0",
+    "uuid": "^13.0.0",
+    "yargs": "^18.0.0"
   }
 }
